# Philon

./: CMakeLists.txt  LICENSE  README.md
data/philon/: index.html
src/: docManager.vala  main.vala  philonWindow.vala
src/widgets/: activeItem.vala  activeList.vala  activeNotebook.vala  folderFolder.vala  folderItem.vala  folderList.vala  webkitView.vala
src/widgets/activeList/: activeItem.vala  activeList.vala  activeTab.vala
src/widgets/builderList/: builderItem.vala  builderList.vala  builderTab.vala
src/widgets/deploymentList/: deploymentItem.vala  deploymentList.vala  deploymentTab.vala
